# PyWebDownloadManager

./: .env.example  LICENSE  app.py  auth.py  local-preset-editor.html  logger.py  pyproject.toml  settings.py
routers/: dashboard.py  download_manager.py  files_router.py
schemas/: __init__.py  configs.py  downloads.py  files.py  url_meta.py
services/: __init__.py  config_loader_service.py  dashboard_service.py  download_manager_service.py  files_service.py  url_meta_service.py
templates/: base.html  dashboard.html  download_manager.html  export_file.html
