[project]
name = "PyWebDownloadManager"
version = "0.1.0"
description = "PyWebDownloadManager"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.105.0",
    "uvicorn>=0.34.0",
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "psutil>=6.0.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.22",
    "dotenv>=0.9.9",
    "nvidia-ml-py>=13.590.48",
    "pydownlib",
]

[tool.uv.sources]
pydownlib = { git = "https://github.com/nbpm128/PyDownLib.git" }
